--- a/index.html
+++ b/index.html
@@ -11,7 +11,17 @@
         <div class="display">
             <button class="start-btn">Start!</button>
 
+            <div class="game-data">
+                <div class="score-box">
+                    <span class="score">0</span>
+                </div>
+                <div class="accuracy-box">
+                    <span class="percentage">%</span>
+                </div>
+            </div>
+
         </div>
+
         <div class="board">
             <div class="target-square"></div>
             <!-- RANK 8 -->
@@ -87,6 +97,7 @@
             <div class="square dSq" id="g1"><div class="file">g</div></div>
             <div class="square lSq" id="h1"><div class="file">h</div></div>
         </div>
+        <div class="time-progress"></div>
         
     </div>
 
