Added Results Table

--- a/index.html
+++ b/index.html
@@ -91,15 +91,16 @@
                 <div class="square lSq" id="h1"><div class="file">h</div></div>
             </div>
 
-            <div class="settings">
-                <button><i class="fas fa-cog"></i></button>
-            </div>
+            
 
             <div class="time-progress"></div>
         </div>
 
         <div class="display">
-            <button class="start-btn">Start!</button>
+            <div class="settings">
+                <button class="start-btn">Start!</button>
+                <button class="cog"><i class="fas fa-cog"></i></button>
+            </div>
 
             <div class="game-data">
                 <div class="score-box">
@@ -117,16 +118,11 @@
             </div>
 
             <div class="results">
-                <table>
+                <table class="results-table">
                     <tr>
                         <th>Attempt</th>
                         <th>Score</th>
                         <th>Accuracy</th>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>9</td>
-                        <td>100%</td>
                     </tr>
                 </table>
             </div>
