--- a/index.html
+++ b/index.html
@@ -154,6 +154,8 @@
         </div>
     </div>
 
+    <footer><a href="https://www.jacobcollinsdev.com/" target="_blank" rel="noopener noreferrer">created by jacobcollinsdev 2020</a></footer>
+
     <audio src="audio/Count-Down.mp3"></audio>
 
 
