Added media query for 1000px

--- a/index.html
+++ b/index.html
@@ -119,6 +119,7 @@
             </div>
 
             <div class="results">
+                <!-- <div class="high-score">Best:</div> -->
                 <table class="results-table">
                     <tr>
                         <th>Attempt</th>
